--- a/Deployment/service.yaml
+++ b/Deployment/service.yaml
@@ -1,14 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
-  namespace: redis
-  labels:
-    app: redis
+  name: redis-master
 spec:
+  ports:
+  - port: 6379
+    targetPort: 6379
   selector:
     app: redis
-  ports:
-  - name: redis-api
-    port: 6379
-    protocol: TCP
+    role: master
